[tool.poetry]
name = "mlflow_extension"
version = "0.1.0"
description = "Extend Mlflow by using decorator"
authors = ["vashineyu <vashineyu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
mlflow = "*"
boto3 = "*"
mmcv-full = { version = "*", optional = true }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
